working on style and getting flexbox to be correct, pictures too small

--- a/styles.css
+++ b/styles.css
@@ -7,17 +7,18 @@ body{
 }
 
 .flex-container{
-  display: flex;
-  flex-flow: row wrap;
+  display: inline-block;
+  /*flex-flow: row wrap;*/
   padding-top: 30px;
   width: 100%;
+  height: 100%;
   margin: 0 20px;
 }
 
 .flex{
   flex: 1 1 20%;
   margin: 20px 5px;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .info{
@@ -30,4 +31,11 @@ body{
   text-transform: uppercase;
   font-weight: bolder;
   border-bottom: 1px solid green;
+}
+
+.profile-pic{
+  height: 250px;
+  width: 250px;
+  background-size: cover;
+  
 }
